@@ -7,6 +7,7 @@
 #include <string>
 #include <map>
 #include <vector>
+#include <algorithm>
 
 #include "token.h"
 #include "spell.h"
@@ -23,12 +24,12 @@ struct Spell_Tag
 };
 
 typedef std::map < std::string, Spell_Tag > spell_map;
+typedef std::pair < std::string, Spell_Tag > spell_map_element;
 
 class Spell_List
 {
 public:
-  Spell_List();
-  Spell_List( TiXmlDocument& );
+  Spell_List( const std::string& );
   virtual ~Spell_List();
 
   TiXmlElement* find_spell( const std::string& );
@@ -37,15 +38,39 @@ public:
   Spell& get_spell( const std::string& );
 
 private:
+  TiXmlDocument doc_;
   spell_map spell_list_;
+
+  friend void load_spell( Spell_Tag const * const );
 
   void read_spell_( Spell_Tag* );
   void read_spell_( const std::string& );
 
-  void add_elements_( Spell*, TiXmlElement const * const};
+  void add_elements_( Spell* const, TiXmlElement const * const);
+  void add_name_( TiXmlElement const * const, Spell& );
 };
 
-class Spells
+/*class Spell_RefPtr
+{
+  Spell_RefPtr( Spell_List const * const, Spell_Tag const * const );
+  Spell_RefPtr( Spell_List const * const, const std::string& );
+  virtual ~Spell_RefPtr() {};
+
+  Spell& operator*();
+  Spell* operator->();
+
+private:
+  spell_map_element const * const pspell_;
+  Spell_List const * const plist_;
+  Spell_Tag const * const ptag_;
+
+  //friend spell_map_element const * get_spell_element( const std::string& );
+  friend void load_spell( Spell_Tag const * const );
+  };*/
+
+
+
+/*class Spells
 {
 public:
   Spells(const char*);
@@ -79,6 +104,6 @@ private:
   Spell_Base_Element get_spell_spell_element_( TiXmlElement*, const std::string&);
   bool check_spell_target_( TiXmlElement* );
   Target* get_spell_target_( TiXmlElement* );
-};
+  };*/
 
 #endif // PATHSPELL_XML_H
